frontend/public/src/components/common/header/Header.css
header {
    display: flex;
    justify-content: space-between;
    margin: 3rem 0 0 0;
}

header .logoContainer img {
    max-height: 70px;
    content: url('../../../assets/logo.png');
}

header nav {
    display: flex;
    align-items: center;
}

header nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

header li {
    font-family: 'Red Rose', cursive;
    background-color: #DBDBDB;
    border-radius: 8px;
    padding: 1rem;
    display: inline-block;
    color: black;
    text-transform: uppercase;
    font-size: 1.2rem;
    margin-left: 0.7rem;
    transition: background-color 0.1s;
}



header li.selected {
    background-color: white;
}

header li.selected:hover {
    background-color: #F7F7F7;
}

header li:not(.selected):hover {
    background-color: transparent;
}

@media (prefers-color-scheme: dark) {
    header li {
        background-color: #282828;
        color: #ddd;
    }
    header li.selected {
        background-color: #3d3d3d;
    }
    header .logoContainer{
        content: url('../../../assets/logodark.png');
    }
    header li.selected:hover {
        background-color: #525252;
    }
    header li:not(.selected):hover {
        background-color: #363636;
    }
}

@media only screen and (max-width: 550px) {
    header {
        flex-direction: column;
    }
    header .logoContainer {
        display: flex;
        justify-content: space-around;
        margin-bottom: 3rem;
    }
    header nav {
        justify-content: space-around;
    }
    header li {
        font-size: 1rem;
    }
    header ul a:nth-child(1) li {
        margin-left: 0;
    }
}

